k8s/laravel-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: coconutdog5321/laravel-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
