k8s/laravel-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # ต้องมี Ingress Controller ใน K8s ก่อนนะครับ
  rules:
    - host: laravel.local # URL ที่คุณต้องการ
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-service
                port:
                  number: 80
